# jadonghwa

./: .gitignore  DECISIONS-AND-NEXT.md  MANIFEST.json  R001-project-definition.md  R002-market-competitor-research.md  R003-automation-discovery-framework.md  R004-work-ontology.md  R005-interview-methodology.md  R006-interview-engine.md  R007-automation-reasoning-engine.md  R008-program-generation.md  R009-evaluation-framework.md  R010-mvp-spec.md  README.md  openapi-mvp.yaml  question-bank-v1.json
apps/api/: README.md  pyproject.toml
apps/api/src/work_discovery_api/: adaptive_interview.py  blueprint_builder.py  blueprint_export.py  config.py  contracts.py  design_package_builder.py  design_package_common.py  design_package_plan.py  design_package_sections.py  discovery_guidance.py  discovery_routes.py  domain.py  evaluation_runner.py  evidence_files.py  implementation_export.py  implementation_package_builder.py  m3_routes.py  m4_routes.py  m5_routes.py  m6_routes.py  m7_routes.py  m8_routes.py  m9_routes.py  main.py  models.py  opportunity_analyzer.py  opportunity_explanation.py  opportunity_payload.py  opportunity_readiness.py  opportunity_scoring.py  postgres_ops.py  postgres_repository.py  postgres_rows.py  postgres_sql.py  provider_interfaces.py  recovery_evidence.py  release_readiness.py  repository.py  (+5 more)
apps/api/tests/: test_discovery_recovery_acceptance.py  test_gate_calibration.py  test_m0_acceptance.py  test_m1_m2_acceptance.py  test_m3_acceptance.py  test_m4_acceptance.py  test_m5_acceptance.py  test_m6_m8_acceptance.py  test_m9_acceptance.py
(+66 files in other folders)
